Wed Jul  6 21:22:16 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* cont.c (fiber_machine_stack_alloc): use MAP_FAILED instead of -1.

Wed Jul  6 21:21:05 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* cont.c (fiber_machine_stack_alloc): remove unnecessary cast.

Wed Jul  6 18:10:13 2011  Shota Fukumori  <sorah@tubusu.net>

	* test/cgi/test_cgi_header.rb(test_cgi_header_nph): Adding space after
	  comma.

	* test/cgi/test_cgi_header.rb(test_cgi_header_nph): Remove variable
	  `now`. Suppress warning.

Wed Jul  6 12:18:09 2011  Shota Fukumori  <sorah@tubusu.net>

	* test/cgi/test_cgi_header.rb(test_cgi_header_nph): Fix bug depends to
	  time. The test fails if time past 1 second in line 136-145

Tue Jul  5 15:28:04 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_here_document): should dispatch heredoc_end
	  scanner event on an empty here document.  fixed Bug#4543.

Tue Jul  5 13:49:26 2011  Yusuke Endoh  <mame@tsg.ne.jp>

	* addr2line.c: fix r32407 to check HAVE_ALLOCA_H.

Tue Jul  5 14:05:43 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/webrick/httpauth/digestauth.rb (_authenticate):
	  Literal texts in HTTP ABNF is case-insensitive (RFC2616 2.1),
	  and a ample implementation in RFC2617 also ignores the case
	  of algorithms. So now this ignores those cases.
	  [ruby-dev:43965] [Feature #4936]

	* lib/webrick/httpauth/digestauth.rb (initialize):
	  Because of above, opera_hack is useless and removed.

Tue Jul  5 01:30:01 2011  Yusuke Endoh  <mame@tsg.ne.jp>

	* thread_pthread.c (native_sleep): cut the waiting time up to
	  100,000,000 because Solaris cond_timedwait() return EINVAL if an
	  argument is greater than current_time + 100,000,000.  This is
	  considered as a kind of spurious wakeup.  The caller to native_sleep
	  should care about spurious wakeup.

Tue Jul  5 01:24:26 2011  Yusuke Endoh  <mame@tsg.ne.jp>

	* cont.c: disable FIBER_USE_NATIVE on Solaris because resuming any